--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,27 @@
 .git/*
 vendor/*
 postgres-data/*
+
+# dependencies
+client/node_modules
+client/.pnp
+*.pnp.js
+
+# testing
+client/coverage
+
+# production
+client/build
+
+# misc
+*.DS_Store
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local
+
+*npm-debug.log*
+*yarn-debug.log*
+*arn-error.log*
+client/yarn.lock
+client/package-lock.json
